--- a/clocky-d3/public/index.html
+++ b/clocky-d3/public/index.html
@@ -8,6 +8,7 @@
   <!-- this is where the magic happens -->
   </svg>
   <script type="text/javascript" src="d3/d3.v2.js"></script>
+  <script type="text/javascript" src="d3/d3.patches.js"></script>
   <!-- https://groups.google.com/forum/?fromgroups=#!topic/clojure/_WkdBGPhI-Q  -->
   <script type="text/javascript"> 
     var CLOSURE_NO_DEPS = true; 
