--- a/clocky-d3/public/clocky-js.html
+++ b/clocky-d3/public/clocky-js.html
@@ -36,7 +36,7 @@ path.hours2 { stroke:brown; fill:pink; }
                 .attr("width", 600)
                 .attr("height", 600)
                 .append("g")
-                .attr("transform", "translate(300,300)rotate(-90)");
+                .attr("transform", "translate(300,300)");
 
             var curClockData = function() {
                 var d = new Date;
