--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript"> 
     var CLOSURE_NO_DEPS = true; 
   </script>
-  <script type="text/javascript" src="out/clocky.js"></script>
+  <script type="text/javascript" src="out/strokes.js"></script>
   <script type="text/javascript"> 
     clocky.core.launch(); 
   </script>
