crawltree: Working version of tree layout
New array-add-stragglers helper method rebuilds clojure
map from d3 object modifications.

--- a/public/crawltree.html
+++ b/public/crawltree.html
@@ -133,5 +133,8 @@ function zoom(d, i) {
 
     </script>
   <script type="text/javascript" src="out/strokes.js"></script>
+  <script type="text/javascript"> 
+    crawltree.core.launch(); 
+  </script>
   </body>
 </html>
