project: calling cljs output strokes-main.js
So that the d3patch can be prepended to create
the final strokes.js file.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript"> 
     var CLOSURE_NO_DEPS = true; 
   </script>
-  <script type="text/javascript" src="out/strokes.js"></script>
+  <script type="text/javascript" src="out/strokes-main.js"></script>
   <script type="text/javascript"> 
     clocky.core.launch(); 
   </script>
