clocky: renamed to examples.clocky
Let's put all the examples in their own namespace

--- a/public/clocky.html
+++ b/public/clocky.html
@@ -15,7 +15,7 @@
   </script>
   <script type="text/javascript" src="out/strokes-main.js"></script>
   <script type="text/javascript"> 
-    clocky.core.launch(); 
+    examples.clocky.launch(); 
   </script>
   <!--
   <script type="text/javascript" src="temp.js"></script>
