examples: moved to strokes.examples.* namespace

--- a/public/clocky.html
+++ b/public/clocky.html
@@ -9,15 +9,8 @@
   </svg>
   <script type="text/javascript" src="d3/d3.v2.js"></script>
   <script type="text/javascript" src="d3/d3.patches.js"></script>
-  <!-- https://groups.google.com/forum/?fromgroups=#!topic/clojure/_WkdBGPhI-Q  -->
-  <script type="text/javascript"> 
-    var CLOSURE_NO_DEPS = true; 
-  </script>
   <script type="text/javascript" src="out/strokes-main.js"></script>
   <script type="text/javascript"> 
-    examples.clocky.launch(); 
+    strokes.examples.clocky.launch(); 
   </script>
-  <!--
-  <script type="text/javascript" src="temp.js"></script>
--->
 </body> </html>
