--- a/public/hull.html
+++ b/public/hull.html
@@ -29,5 +29,5 @@ circle {
 <script type="text/javascript" src="d3/d3.patches.js"></script>
 <script type="text/javascript" src="out/strokes-main.js"></script>
 <script type="text/javascript"> 
-  examples.hull.launch(); 
+  strokes.examples.hull.launch(); 
 </script>
