--- a/public/hull.html
+++ b/public/hull.html
@@ -26,8 +26,7 @@ circle {
 <body>
 
 <script type="text/javascript" src="d3/d3.v3.js"></script>
-<script type="text/javascript" src="d3/d3.patches.js"></script>
-<script type="text/javascript" src="out/strokes-main.js"></script>
+<script type="text/javascript" src="out/strokes.js"></script>
 <script type="text/javascript"> 
   strokes.examples.hull.launch(); 
 </script>
