--- a/public/strokes-quadtree.html
+++ b/public/strokes-quadtree.html
@@ -34,7 +34,7 @@
 </style>
 <body>
 <script src="d3/d3.v3.js"></script>
-<script type="text/javascript" src="out/strokes.js"></script>
 <script type="text/javascript"> 
-  strokes.examples.quadtree.launch(); 
+  strokes_demo="quadtree";
 </script>
+<script type="text/javascript" src="out/strokes.js"></script>
