--- a/public/strokes-hull.html
+++ b/public/strokes-hull.html
@@ -26,7 +26,7 @@ circle {
 <body>
 
 <script type="text/javascript" src="d3/d3.v3.js"></script>
-<script type="text/javascript" src="out/strokes.js"></script>
 <script type="text/javascript"> 
-  strokes.examples.hull.launch(); 
+  strokes_demo="hull";
 </script>
+<script type="text/javascript" src="out/strokes.js"></script>
