d3: upgraded to 3.0.4 from d3 repo
Also renamed to simpler name as found in d3 repo.

--- a/public/clocky-js.html
+++ b/public/clocky-js.html
@@ -16,7 +16,7 @@ path.hours1 { stroke:pink; fill:brown; }
 path.hours2 { stroke:brown; fill:pink; }
 
         </style>
-        <script type="text/javascript" src="d3/d3.v2.js"></script>
+        <script type="text/javascript" src="d3/d3.js"></script>
     </head>
     <body>
       <div id="clocky">
