--- a/public/crawltree.html
+++ b/public/crawltree.html
@@ -47,8 +47,7 @@ circle.child {
   <svg id="clocky">
   <!-- this is where the magic happens -->
   </svg>
-  <script type="text/javascript" src="d3/d3.v2.js"></script>
-  <script type="text/javascript" src="d3/d3.patches.js"></script>
+  <script type="text/javascript" src="d3/d3.js"></script>
   <!-- https://groups.google.com/forum/?fromgroups=#!topic/clojure/_WkdBGPhI-Q  -->
   <script type="text/javascript"> 
     var CLOSURE_NO_DEPS = true; 
