--- a/public/strokes-clocky.html
+++ b/public/strokes-clocky.html
@@ -20,7 +20,7 @@ path.hours2 { stroke:brown; fill:pink; }
 <!-- this is where the magic happens -->
 </svg>
 
-<script type="text/javascript" src="d3/d3.v3.js"></script>
+<script type="text/javascript" src="d3/d3.js"></script>
 <script type="text/javascript"> 
   strokes_demo="clocky";
 </script>
