--- a/public/strokes-hull.html
+++ b/public/strokes-hull.html
@@ -25,7 +25,7 @@ circle {
 </style>
 <body>
 
-<script type="text/javascript" src="d3/d3.v3.js"></script>
+<script type="text/javascript" src="d3/d3.js"></script>
 <script type="text/javascript"> 
   strokes_demo="hull";
 </script>
