--- a/public/strokes-quadtree.html
+++ b/public/strokes-quadtree.html
@@ -33,7 +33,7 @@
 
 </style>
 <body>
-<script src="d3/d3.v3.js"></script>
+<script src="d3/d3.js"></script>
 <script type="text/javascript"> 
   strokes_demo="quadtree";
 </script>
