--- a/public/strokes-test.html
+++ b/public/strokes-test.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<!-- this file swiped and adapted from domina test suite -->
   <head>
     <meta charset="UTF-8">
     <title>Domina Test Page (simple optimizations)</title>
