--- a/public/strokes-test.html
+++ b/public/strokes-test.html
@@ -3,7 +3,7 @@
 <!-- this file swiped and adapted from domina test suite -->
   <head>
     <meta charset="UTF-8">
-    <title>Domina Test Page (simple optimizations)</title>
+    <title>strokes tests</title>
     <link href="tests.css" rel="stylesheet" type="text/css"><link>
     <script type="text/javascript">
       /* Android 2.x claims XPath support, but has none.  Force non-native
