mrhyde: hyde cache now implemented for maps
Tests confirm modifications can be recovered, including
adding new keys and mucking with old ones.

--- a/public/mrhyde-test.html
+++ b/public/mrhyde-test.html
@@ -55,6 +55,14 @@
       zeroOutFirstArrayElement: function(a) {
         a[0] = 0;
         return [a, a[0]];
+      },
+      zeroOutMapKeyOne: function(a) {
+        a.one = 0;
+        return [a, a.one];
+      },
+      zeroOutMapKeyTen: function(a) {
+        a.ten = 0;
+        return [a, a.ten];
       }
     }
     </script>
