test: confirm that js->clj also blows up on cycles
When confronted with a loop, js->clj doesn't try
to do anything fancy.

--- a/public/mrhyde-test.html
+++ b/public/mrhyde-test.html
@@ -63,8 +63,19 @@
       zeroOutMapKeyTen: function(a) {
         a.ten = 0;
         return [a, a.ten];
-      }
+      },
     }
+    var p = {
+      node: "yes",
+      parent: null,
+      children: [
+        { node: "yes",
+          parent: null,
+          children: []
+        }
+      ]
+    };
+    p.children[0].parent = p;
     </script>
 
 
