mrhyde: namespace rearrangement to get tests working
Ugh. No single segment. No dashes. Ugh.

--- a/public/mrhyde-test.html
+++ b/public/mrhyde-test.html
@@ -23,17 +23,19 @@
     <script type="text/javascript" src="xpath.js"></script>
  </head>
   <body>
-    <iframe src="single-mrhyde-test.html" width="50%" seamless="true" name="noopts" sandbox="">
+<!--     <iframe src="single-mrhyde-test.html" width="50%" seamless="true" name="noopts" sandbox="">
       <p>Your browser does not support iframes - what the hell browser is this?</p>
     </iframe>
     <iframe src="single-mrhyde-test.html" width="50%" seamless="true" name="someopts" sandbox="">
       <p>Your browser does not support iframes - what the hell browser is this?</p>
     </iframe>
-
+ -->
+    
     <script type="text/javascript" src="dummylib.js"></script>
     <script type="text/javascript" src="out/strokes_test.js"></script>
     <script>
       mrhyde.test.launch();
     </script>
+  
   </body>
 </html>
