mrhyde: improvements to typepatcher: separate vec and seq
mrhyde unit test now being generated at 4 different compiler
settings and viewable from one overview page (advanced is
not working)

all hyde-array prototype methods stubbed out.

separted hyde-array on sequential and vector types. strokes
now only patches known vector types. fixed some internal "bugs"
caused by internal assumptions that all patches were in play -
like js/Function.prototype.bind.apply that were being called
on various seqs (need to be arrays now) (there is still one
lurking that causes map to depende on patching core.LazySeq
as a hyde-array). Retired silly global check for a per-prototype
check that prevents patches being applied twice.

Also on strokes, had to remove mouse patch for now - doesn't
seem to be necessary. And some downstream demos were also tweaked
to pass vectory types to d3 instead of generic seqs. A couple seem
noticibly faster - are they, let's stay in a good mood and
assume so.

Proposed next steps: make bootstrap necessary and give optimizations
advanced the old college try before throwing in the towel.

--- a/public/mrhyde-test-min.html
+++ b/public/mrhyde-test-min.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="dummylib.js"></script>
     <div id="daddy">
-      <script id="hook-of-destruction" type="text/javascript" src="out/strokes_test_no_opt.js"></script>
+      <script id="hook-of-destruction" type="text/javascript" src="out/strokes_test_min.js"></script>
     </div>
     <script>
-      mrhyde.test.launch("no opt");
+      mrhyde.test.launch("min");
     </script>
   </body>
 </html>
