--- a/public/mrhyde-test.html
+++ b/public/mrhyde-test.html
@@ -7,9 +7,6 @@
     <link href="tests.css" rel="stylesheet" type="text/css"><link>
  </head>
   <body>
-     <iframe style="display:inline" src="mrhyde-test-no-opt.html" width="45%" height="600" seamless="true" name="noopts">
-      <p>Your browser does not support iframes - what the hell browser is this?</p>
-    </iframe>
      <iframe style="display:inline" src="mrhyde-test-whitespace.html" width="45%" height="600" seamless="true" name="noopts">
       <p>Your browser does not support iframes - what the hell browser is this?</p>
     </iframe>
@@ -17,6 +14,9 @@
       <p>Your browser does not support iframes - what the hell browser is this?</p>
     </iframe>
      <iframe style="display:inline" src="mrhyde-test-advanced.html" width="45%" height="600" seamless="true" name="noopts">
+      <p>Your browser does not support iframes - what the hell browser is this?</p>
+    </iframe>
+     <iframe style="display:inline" src="mrhyde-test-min.html" width="45%" height="600" seamless="true" name="noopts">
       <p>Your browser does not support iframes - what the hell browser is this?</p>
     </iframe>
 <!--
