strokes: cleaned up examples, now each gens separate js output
Cleaned up strokes examples.

--- a/public/strokes-circle-pack.html
+++ b/public/strokes-circle-pack.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<title>Circle-pack</title>
 <style>
 
 circle {
@@ -21,7 +22,4 @@ text {
 </style>
 <body>
 <script type="text/javascript" src="d3/d3.js"></script>
-<script type="text/javascript"> 
-  strokes_demo="circle-pack";
-</script>
-<script type="text/javascript" src="out/strokes.js"></script>
+<script type="text/javascript" src="out/strokes-circle-pack.js"></script>
