--- a/public/strokes-hull.html
+++ b/public/strokes-hull.html
@@ -26,7 +26,4 @@ circle {
 <body>
 
 <script type="text/javascript" src="d3/d3.js"></script>
-<script type="text/javascript"> 
-  strokes_demo="hull";
-</script>
-<script type="text/javascript" src="out/strokes.js"></script>
+<script type="text/javascript" src="out/strokes-hull.js"></script>
