--- a/public/strokes-quadtree.html
+++ b/public/strokes-quadtree.html
@@ -34,7 +34,4 @@
 </style>
 <body>
 <script src="d3/d3.js"></script>
-<script type="text/javascript"> 
-  strokes_demo="quadtree";
-</script>
-<script type="text/javascript" src="out/strokes.js"></script>
+<script type="text/javascript" src="out/strokes-quadtree.js"></script>
