--- a/public/strokes-clocky.html
+++ b/public/strokes-clocky.html
@@ -21,7 +21,4 @@ path.hours2 { stroke:brown; fill:pink; }
 </svg>
 
 <script type="text/javascript" src="d3/d3.js"></script>
-<script type="text/javascript"> 
-  strokes_demo="clocky";
-</script>
-<script type="text/javascript" src="out/strokes.js"></script>
+<script type="text/javascript" src="out/strokes-clocky.js"></script>
