rotating-voronoi example added
This one was an interesting exercise. Highlights were:

 * the points atom which holds a vector of atoms of vectors
   - not near as bad as it sounds

 * turning this narly resampling function:

     function resample(points) {
      var i = -1,
          n = points.length,
          p0 = points[n - 1], x0 = p0[0], y0 = p0[1], p1, x1, y1,
          points2 = [];
      while (++i < n) {
        p1 = points[i], x1 = p1[0], y1 = p1[1];
        points2.push(
          [(x0 * 2 + x1) / 3, (y0 * 2 + y1) / 3],
          [(x0 + x1 * 2) / 3, (y0 + y1 * 2) / 3],
          p1
        );
        p0 = p1, x0 = x1, y0 = y1;
      }
      return points2;
    }

  into this:

    (defn three-polate [[[x0 y0] [x1 y1]]]
      [ [x0 y0]
        [(/ (+ (* 2 x0) x1) 3), (/ (+ (* 2 y0) y1) 3)]
        [(/ (+ (* 2 x1) x0) 3), (/ (+ (* 2 y1) y0) 3)] ])

    (defn resample [pts]
      (let [pairs (map vector (cons (last pts) pts) pts)]
        (mapcat three-polate pairs)))

  The hardest part was reverse engineering the original.
  Well, OK, it took me a few minutes to figure out a nice
  way to generate the pairs too.

It was also running a little slow, so I simplified the
geometry slightly. We'll fix that eventually with
closure advanced optimizations...

--- a/voronoi-clipping/public/index.html
+++ b/voronoi-clipping/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>voronoi-example</title>
+<title>voronoi-clipping</title>
 <style>
 
 circle,
@@ -20,5 +20,5 @@ path:hover {
 
 <body>
 	<script type="text/javascript" src="d3/d3.js"></script>
-	<script type="text/javascript" src="out/voronoi-example.js"></script>
+	<script type="text/javascript" src="out/voronoi-clipping.js"></script>
 </body>
