--- a/example-template/public/index.html
+++ b/example-template/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Example</title>
-	<meta charset="utf-8" />
-</head>
-<body>
-	<script type="text/javascript" src="d3/d3.js"></script>
-	<script type="text/javascript" src="out/example.js"></script>
+<meta charset="utf-8">
+<title>example</title>
+<style>
+/* style here */
+</style>
 
+<body>
+  <script type="text/javascript" src="d3/d3.js"></script>
+	<script type="text/javascript" src="out/example.js"></script>
 </body>
-</html>
