mrhyde: most tests now passing in advanced comp mode
All tests except for map patching are now passing. I relaized
that I needed to make a dummylib externs file for the compiler.

Also made a new benchmark. Everything is as it was, or maybe
a bit better there.

--- a/public/mrhyde-benchmark.html
+++ b/public/mrhyde-benchmark.html
@@ -65,7 +65,7 @@
 
     <applet code="nano" archive="benchmark/nano.jar"></applet>
     <script src="benchmark/benchmark.js"></script>
-    <script type="text/javascript" src="out/strokes_test.js"></script>
+    <script type="text/javascript" src="out/strokes_test_simple.js"></script>
     <script>
 
     // lazy global;
@@ -159,7 +159,7 @@
       addOnCycleEnd(suite);
       suite.on('complete', function () {
         console.log("Result map: ");
-        console.log(String(mrhyde.toclj(results)));
+        console.log(String(mrhyde.mrhyde.toclj(results)));
       });
       suite.run({ 'async': true });
     }
