--- a/public/mrhyde-test-simple.html
+++ b/public/mrhyde-test-simple.html
@@ -8,7 +8,7 @@
  </head>
   <body>
     <script type="text/javascript" src="d3/d3.js"></script>
-    <script type="text/javascript" src="dummylib.js"></script>
+    <script type="text/javascript" src="dummylib/dummylib.js"></script>
     <div id="daddy">
       <script id="hook-of-destruction" type="text/javascript" src="out/strokes_test_simple.js"></script>
     </div>
