blade: blade-tutorial1 now working again

--- a/public/blade-tutorial1.html
+++ b/public/blade-tutorial1.html
@@ -12,11 +12,9 @@
 <body>
 	<div id="mappy" style="width: 600px; height: 400px"></div>
 
-	<script type="text/javascript" src="leaflet/leaflet.js"></script>
-	<script type="text/javascript"> 
-		blade_demo="tutorial1";
-	</script>
-	<script type="text/javascript" src="out/strokes.js"></script>
+
+	<script type="text/javascript" src="leaflet/leaflet-src.js"></script>
+	<script type="text/javascript" src="out/blade-tutorial1.js"></script>
 
 </body>
 </html>
