blade: now using isArray-polyfill for simpler interop
Since leaflet now uses Object.prototype.isString to check
that objects are arrays (instead of the earlier instanceof
Array methods), interop can be made much simpler by simply
using the new isArray.js polyfill.

blade initialization now does very little patching -
vector types advertise themselves as isArray.js producers
and the polyfill ensures that leaflet can consume these
container objects.

--- a/public/blade-tutorial1.html
+++ b/public/blade-tutorial1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leaflet Quick Start Guide Example</title>
+	<title>Blade - tutorial1 example</title>
 	<meta charset="utf-8" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,8 @@
 <body>
 	<div id="mappy" style="width: 600px; height: 400px"></div>
 
-
+  <!-- this polyfill provides isArray.js compatibility -->
+  <script type="text/javascript" src="isArray-polyfill.js"></script>
 	<script type="text/javascript" src="leaflet/leaflet-src.js"></script>
 	<script type="text/javascript" src="out/blade-tutorial1.js"></script>
 
