mrhyde: Updated to latest ArrayLike.js spec
Updated code and polyfill to latest version of
https://github.com/dribnet/ArrayLike.js

--- a/public/blade-tutorial1.html
+++ b/public/blade-tutorial1.html
@@ -13,7 +13,7 @@
 	<div id="mappy" style="width: 600px; height: 400px"></div>
 
   <!-- this polyfill provides isArray.js compatibility -->
-  <script type="text/javascript" src="isArray-polyfill.js"></script>
+  <script type="text/javascript" src="ArrayLikeIsArray.js"></script>
 	<script type="text/javascript" src="leaflet/leaflet-src.js"></script>
 	<script type="text/javascript" src="out/blade-tutorial1.js"></script>
 
