general update pattern: finished 2 and 3.
Straightforward port. Nice to see transitions working.

--- a/general-update-pattern/public/gup3.html
+++ b/general-update-pattern/public/gup3.html
@@ -15,6 +15,10 @@ text {
   fill: #333;
 }
 
+.exit {
+  fill: brown;
+}
+
 </style>
 <body>
 	<script type="text/javascript" src="d3/d3.js"></script>
