simple-bar: added static version for comparision

--- a/simple-bar/public/index.html
+++ b/simple-bar/public/index.html
@@ -31,6 +31,13 @@ div.inset {
   Click to map data to document.
   <br>
 </div>
+<div id="animated"></div>
+<hr>
+<div class="inset">
+  Without animation the code is even simpler and produces
+  this static version:
+</div>
+<div id="static"></div>
 
 	<script type="text/javascript" src="d3/d3.js"></script>
 	<script type="text/javascript" src="out/simple-bar.js"></script>
