--- a/highlighter/public/index.html
+++ b/highlighter/public/index.html
@@ -13,12 +13,20 @@ body {
   background: yellow;
 }
 
+.invisible {
+  opacity: 0;
+}
+
 /* this will make the transitions ease in/out */
 .high1,.high2,.high3,.high4 {
   -webkit-transition: background 0.2s ease;
   -moz-transition: background 0.2s ease;
   -o-transition: background 0.2s ease;
   -ms-transition: background 0.2s ease;  
+  -webkit-transition: opacity 0.4s ease;
+  -moz-transition: opacity 0.4s ease;
+  -o-transition: opacity 0.4s ease;
+  -ms-transition: opacity 0.4s ease;  
 }
 
 /* code styles */
@@ -51,7 +59,7 @@ body {
   <body>
     <center>
     <h2>
-      try keys: 1 2 3 ! @ # `<br>
+      try keys: 1 2 3 ! @ # Q q W w E e`<br>
     </h2>
     </center>
 <pre style="font-size:20px;"><code class="clojure">
