'refined' key mapping
see if this feels more doable.

--- a/highlighter/public/index.html
+++ b/highlighter/public/index.html
@@ -59,7 +59,7 @@ body {
   <body>
     <center>
     <h2>
-      try keys: 1 2 3 ! @ # Q q W w E e`<br>
+      try keys: 1 2 3 ! @ # Q q W w E e `~ a A<br>
     </h2>
     </center>
 <pre style="font-size:20px;"><code class="clojure">
