--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 </style>
 
 <body>
-  <span id="hostspan" width="1024" height="768"></span>
+  <span id="hostspan" width="1024" height="768">
+  </span>
 	<script type="text/javascript" src="d3/d3.js"></script>
 	<script type="text/javascript" src="out/b3.js"></script>
 </body>
