slides z order, alternate key presses

--- a/public/letters.html
+++ b/public/letters.html
@@ -6,7 +6,7 @@
 </style>
 
 <body>
-<iframe id="A" src="A.html" style="-webkit-transform: translate3d(-411px,-296px,0px) scale(0.1);"></iframe>
-<iframe id="B" src="B.html" style="-webkit-transform: translate3d(-261px,-146px,0px) scale(0.3);"></iframe>
-<iframe id="C" src="C.html" style="-webkit-transform: translate3d(261px,-146px,0px) scale(0.4);"></iframe>
+<iframe id="A" src="A.html" style="-webkit-transform: translate3d(-411px,-296px,0px) scale(0.2);z-index:3;"></iframe>
+<iframe id="B" src="B.html" style="-webkit-transform: translate3d(-261px,-146px,0px) scale(0.3);z-index:2;"></iframe>
+<iframe id="C" src="C.html" style="-webkit-transform: translate3d(261px,-146px,0px) scale(0.4);z-index:1;"></iframe>
 </body>
