gup: now loads into target span, less tall

--- a/general-update-pattern/public/gup2.html
+++ b/general-update-pattern/public/gup2.html
@@ -3,6 +3,10 @@
 <title>general update pattern 2</title>
 <style>
 
+body {
+  background:whitesmoke;
+}
+
 text {
   font: bold 48px monospace;
 }
@@ -17,6 +21,7 @@ text {
 
 </style>
 <body>
+  <span id="gup2-node"></span>
 	<script type="text/javascript" src="d3/d3.js"></script>
 	<script type="text/javascript" src="out/gup2.js"></script>
 </body>
