provided histo-grow a span target

--- a/histo-grow/public/index.html
+++ b/histo-grow/public/index.html
@@ -26,6 +26,7 @@ body {
 </style>
 
 <body>
+  <span id="histo-node"></span>
 	<script type="text/javascript" src="d3/d3.js"></script>
 	<script type="text/javascript" src="out/histo-grow.js"></script>
 </body>
