--- a/general-update-pattern/public/index.html
+++ b/general-update-pattern/public/index.html
@@ -4,7 +4,7 @@
 <style>
 
 body {
-  background:whitesmoke;
+  background:#272822;
 }
 
 text {
@@ -16,7 +16,11 @@ text {
 }
 
 .update {
-  fill: #333;
+  fill: #bbb;
+}
+
+.exit {
+  fill: brown;
 }
 
 </style>
