strokes/mrhyde cleanup
Added mrhyde.core/bootstrap

Cleaned up code and tests.

--- a/public/mrhyde-test-simple.html
+++ b/public/mrhyde-test-simple.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="dummylib/dummylib.js"></script>
     <div id="daddy">
-      <script id="hook-of-destruction" type="text/javascript" src="out/strokes_test_simple.js"></script>
+      <script id="hook-of-destruction" type="text/javascript" src="out/mrhyde_test_simple.js"></script>
     </div>
     <script>
       mrhyde.test.launch("simple");
