updated and tested all examples with strokes 0.4.1
Also cleaned up html on simple-bar so it would be clear
that is a before and after strokes example in the code.

--- a/simple-bar/public/index.html
+++ b/simple-bar/public/index.html
@@ -38,6 +38,12 @@ div.inset {
   this static version:
 </div>
 <div id="static"></div>
+<hr>
+<div class="inset">
+  It is also possible to write the above code without strokes,
+  but then you have a lot of data interop code (see source).
+</div>
+<div id="strokesless"></div>
 
 	<script type="text/javascript" src="d3/d3.js"></script>
 	<script type="text/javascript" src="out/simple-bar.js"></script>
