--- a/public/test-mrhyde-jso.html
+++ b/public/test-mrhyde-jso.html
@@ -11,5 +11,8 @@ body {
 </style>
 
 <body>
-  <script type="text/javascript" src="out/tester.js"></script>
+  <script type="text/javascript" src="out/mrhyde_test_whitespace.js"></script>
+  <script type="text/javascript">
+    mrhyde.jso.runtest();
+  </script>
 </body>
