mrhyde: fixed jso tests and cleand up extend-js

--- a/public/test-mrhyde-jso.html
+++ b/public/test-mrhyde-jso.html
@@ -11,7 +11,7 @@ body {
 </style>
 
 <body>
-  <script type="text/javascript" src="out/mrhyde_test_whitespace.js"></script>
+  <script type="text/javascript" src="out/mrhyde_test_simple.js"></script>
   <script type="text/javascript">
     mrhyde.jso.runtest();
   </script>
