clj/cljs upgrade, test and mrhyde tweaks
Upgraded to cljsbuild 0.3.2 and clj 1.5.1

mrhyde: Added PersistentArrayMap to map types.

Tweaked tests - now passing.

--- a/public/mrhyde-benchmark.html
+++ b/public/mrhyde-benchmark.html
@@ -65,7 +65,7 @@
 
     <applet code="nano" archive="benchmark/nano.jar"></applet>
     <script src="benchmark/benchmark.js"></script>
-    <script type="text/javascript" src="out/strokes_test_simple.js"></script>
+    <script type="text/javascript" src="out/mrhyde_test_simple.js"></script>
     <script>
 
     // lazy global;
