pulled out mrhyde, now external dependency
Tests still not passing, but most surgury done.

--- a/public/mrhyde-test-advanced.html
+++ b/public/mrhyde-test-advanced.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="dummylib/dummylib.js"></script>
     <div id="daddy">
-      <script id="hook-of-destruction" type="text/javascript" src="out/mrhyde_test_advanced.js"></script>
+      <script id="hook-of-destruction" type="text/javascript" src="out/strokes_test_advanced.js"></script>
     </div>
     <script>
-      mrhyde.test.launch("advanced");
+      strokes.test.launch("advanced");
     </script>
   </body>
 </html>
