--- a/public/mrhyde-test-whitespace.html
+++ b/public/mrhyde-test-whitespace.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="dummylib/dummylib.js"></script>
     <div id="daddy">
-      <script id="hook-of-destruction" type="text/javascript" src="out/mrhyde_test_whitespace.js"></script>
+      <script id="hook-of-destruction" type="text/javascript" src="out/strokes_test_whitespace.js"></script>
     </div>
     <script>
-      mrhyde.test.launch("whitespace");
+      strokes.test.launch("whitespace");
     </script>
   </body>
 </html>
